update logs and added glove embeddings

--- a/Samples/VAD.ipynb
+++ b/Samples/VAD.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T16:17:01.266650Z",
@@ -30,6 +30,9 @@
     "import re\n",
     "import random\n",
     "import os\n",
+    "import bcolz\n",
+    "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T18:40:37.774123Z",
@@ -55,7 +58,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new files.. Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Need a function to load the GloVe word embeddings.\n",
+    "\"\"\"\n",
+    "glovePath = \"/media/data/Datasets/glove\"\n",
+    "\n",
+    "def loadGlove(glove_path, dim=100):\n",
+    "    acceptedDimensions = [50, 100, 200, 300]\n",
+    "    if dim not in acceptedDimensions:\n",
+    "        print(\"You didn't choose a right dimension.\")\n",
+    "    pickleWordFile = f'{glove_path}/6B.'+str(dim)+'_words.pkl'\n",
+    "    pickleIdFile   = f'{glove_path}/6B.'+str(dim)+'_idx.pkl'\n",
+    "    pickleDatFile  = f'{glove_path}/glove.6B.'+str(dim)+'.dat'\n",
+    "    pickleDataset  = f'{glove_path}/glove.6B.'+str(dim)+'d.txt'\n",
+    "    \n",
+    "    if os.path.isfile(pickleWordFile):\n",
+    "        # check if we've made the outputs before\n",
+    "        print(\"Preloading files..\", end=\" \")\n",
+    "        vectors = bcolz.open(pickleDatFile)[:]\n",
+    "        words = pickle.load(open(pickleWordFile, 'rb'))\n",
+    "        word2idx = pickle.load(open(pickleIdFile, 'rb'))\n",
+    "        glove = {w: vectors[word2idx[w]] for w in words}\n",
+    "        print(\"Done.\")\n",
+    "        return glove\n",
+    "    else:\n",
+    "        print(\"Creating new files..\", end=\" \")\n",
+    "        words    = []\n",
+    "        idx      = 0\n",
+    "        word2idx = {}\n",
+    "        vectors = bcolz.carray(np.zeros(1), rootdir=pickleDatFile, mode='w')\n",
+    "\n",
+    "        with open(pickleDataset, 'rb') as f:\n",
+    "            for l in f:\n",
+    "                line = l.decode().split()\n",
+    "                word = line[0]\n",
+    "                words.append(word)\n",
+    "                word2idx[word] = idx\n",
+    "                idx += 1\n",
+    "                vect = np.array(line[1:]).astype(np.float)\n",
+    "                vectors.append(vect)\n",
+    "\n",
+    "        vectors = bcolz.carray(vectors[1:].reshape((400000, dim)),\n",
+    "                               rootdir=pickleDatFile, mode='w')\n",
+    "        vectors.flush()\n",
+    "        # save the outputs\n",
+    "        pickle.dump(words, open(pickleWordFile, 'wb'))\n",
+    "        pickle.dump(word2idx, open(pickleIdFile, 'wb'))\n",
+    "        # create the dataset\n",
+    "        glove = {w: vectors[word2idx[w]] for w in words}\n",
+    "        print(\"Done.\")\n",
+    "        return glove\n",
+    "\n",
+    "glove = loadGlove(glovePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.98392315,  1.42974139, -0.08124647,  0.04007039, -0.31925197,\n",
+       "         0.5757713 ,  0.09597052, -0.21517332, -0.12606593,  0.93122532,\n",
+       "        -0.12218803,  0.27582826,  0.34511007,  0.03050594,  0.84269424,\n",
+       "        -1.12956095,  0.2612932 ,  0.44484818,  1.927427  , -0.95003986,\n",
+       "         0.38939865, -0.62175537,  0.45345025, -0.21659891,  0.17194881,\n",
+       "         0.09370914, -0.5321684 ,  0.08821129,  0.99128168, -0.17201137,\n",
+       "         0.08552617, -0.66286482, -1.18550727, -0.09153028,  0.11950196,\n",
+       "         0.95075075,  0.16962305,  0.56645186,  0.25223766, -0.13500021,\n",
+       "        -0.21090104,  0.30063125, -0.58097386,  1.0647789 , -0.76772187,\n",
+       "         1.04934135, -0.20321516,  0.41729599, -0.14035122, -0.19111973,\n",
+       "        -0.018021  ,  0.97393941, -0.15037015, -0.23272674,  0.23922272,\n",
+       "        -0.29944397,  0.74329089,  0.46211778, -0.87003664, -0.77989967,\n",
+       "         0.78152365, -0.5156572 , -0.71853112, -1.00316458,  0.00300219,\n",
+       "         0.87408604,  0.54657905, -0.44320988,  0.56794198,  0.05015717,\n",
+       "        -0.55208738,  0.11741408,  0.21894418,  0.09392769,  0.54130194,\n",
+       "        -0.5407952 , -0.56249632,  0.37078608,  0.87663356,  0.60062017,\n",
+       "         0.44078588,  0.26111463,  0.17461218,  0.13862442,  0.43905954,\n",
+       "        -0.14644959, -0.33929994,  0.404721  , -0.00687405,  0.24186778,\n",
+       "         0.09226805,  0.45372252,  0.07417801, -0.63561336,  0.41015122,\n",
+       "         0.53940636,  0.36856639, -0.22655108, -0.69928162,  0.38295158]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def createWeightMatrix(targetVocab, glove):\n",
+    "    \"\"\"\n",
+    "    For each word in the dataset's vocabulary,\n",
+    "    check if it's also in the @glove vocab.\n",
+    "    If it does, then we load the pre-trained word vector.\n",
+    "    Otherwise we use some random vector.\n",
+    "    \"\"\"\n",
+    "    length  = len(targetVocab)\n",
+    "    dim = glove['fail'].shape\n",
+    "    wMatrix = np.zeros((length, dim[0]))\n",
+    "    wordsFound = 0\n",
+    "    for i, word in enumerate(targetVocab):\n",
+    "        try:\n",
+    "            wMatrix[i] = glove[word]\n",
+    "            wordsFound += 1\n",
+    "        except KeyError:\n",
+    "            wMatrix[i] = np.random.normal(scale=0.6, size=dim)\n",
+    "    return wMatrix\n",
+    "\n",
+    "createWeightMatrix(['noodb'], glove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T18:40:40.519162Z",
@@ -77,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T15:49:50.995429Z",
@@ -142,8 +271,10 @@
     "    TODO: Add layer normalisation?\n",
     "    https://arxiv.org/abs/1607.06450\n",
     "    \n",
+    "    We also set the hidden state size to 512.\n",
+    "    \n",
     "    \"\"\"\n",
-    "    def __init__(self, hiddenSize, outputSize, maxLength = max_length):\n",
+    "    def __init__(self, hiddenSize=512, outputSize, maxLength = max_length):\n",
     "        \"\"\"\n",
     "        # dropout omitted\n",
     "        \"\"\"\n",
@@ -199,8 +330,10 @@
    "source": [
     "class Inference(nn.Module):\n",
     "    \"\"\"\n",
-    "    \n",
-    "    The latent size is 400 as per the paper.\n",
+    "    Note that the inference and prior networks\n",
+    "    are a simple 1 layer feed forward neural network.\n",
+    "    Therefore the size of the weights are entirely based on the size\n",
+    "    of the input.\n",
     "    \"\"\"\n",
     "    def __init__(self, feature_size, class_size, latent_size=400):\n",
     "        super(Inference, self).__init__()\n",
@@ -344,7 +477,8 @@
     "        We want to predict the bag of succeeding words\n",
     "        in the response using the latent variable z at each\n",
     "        time step.\n",
-    "        \"\"\""
+    "        \"\"\"\n",
+    "        return 0"
    ]
   },
   {
