add setup for code. If i want to continue with recreating the paper then i'll need to start mining datasets. Alternatively I can start implementing the transformer model

--- a/Samples/VAD.ipynb
+++ b/Samples/VAD.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T18:40:37.774123Z",
@@ -59,7 +59,160 @@
    },
    "outputs": [],
    "source": [
-    "max_length = 100"
+    "max_length = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading lines..\n",
+      "Read 135842 sentence pairs.\n",
+      "Trimmed to 13465 sentence pairs.\n",
+      "Counting words..\n",
+      "Counted words:\n",
+      "fra 5392\n",
+      "eng 3552\n",
+      "['vous etes depourvue d ambition .', 'you re unambitious .']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Dataset processing functions\n",
+    "\"\"\"\n",
+    "\n",
+    "# start_of_sentence and end_of_sentence token\n",
+    "SOS_token = 0\n",
+    "EOS_token = 1\n",
+    "\n",
+    "class Lang:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.word2index = {}\n",
+    "        self.word2count = {}\n",
+    "        self.index2word = {\n",
+    "            0: \"SOS\",\n",
+    "            1: \"EOS\"\n",
+    "        }\n",
+    "        self.n_words = len(self.index2word.keys())\n",
+    "    \n",
+    "    def addSentence(self, sentence):\n",
+    "        for word in sentence.split(' '):\n",
+    "            self.addWord(word)\n",
+    "    \n",
+    "    def addWord(self, word):\n",
+    "        if word not in self.word2index:\n",
+    "            self.word2index[word] = self.n_words\n",
+    "            self.word2count[word] = 1\n",
+    "            self.index2word[self.n_words] = word\n",
+    "            self.n_words += 1\n",
+    "        else:\n",
+    "            self.word2count[word] += 1\n",
+    "            \n",
+    "def unicodeToAscii(s):\n",
+    "    return ''.join(\n",
+    "        c for c in unicodedata.normalize('NFD', s)\n",
+    "        if unicodedata.category(c) != 'Mn'\n",
+    "    )\n",
+    "def norm(s):\n",
+    "    s = unicodeToAscii(s.lower().strip())\n",
+    "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
+    "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
+    "    return s\n",
+    "\n",
+    "def readLangs(lang1, lang2, reverse=False):\n",
+    "    print(\"Reading lines..\")\n",
+    "    \n",
+    "    # read the file and split into lines\n",
+    "    directory = \"../Datasets/Tutorials/seq2seq\"\n",
+    "    filename = lang1 + \"-\" + lang2 + \".txt\"\n",
+    "    filepath = os.path.join(directory, filename)\n",
+    "    lines = open(filepath, encoding='utf-8').\\\n",
+    "        read().strip().split(\"\\n\")\n",
+    "    \n",
+    "    # split every line into pairs\n",
+    "    # note that the language phrases are split by a tab.\n",
+    "    pairs = [[norm(s) for s in l.split('\\t')] for l in lines]\n",
+    "    \n",
+    "    # reverse the pairs\n",
+    "    if reverse:\n",
+    "        pairs = [list(reversed(p)) for p in pairs]\n",
+    "        input_lang = Lang(lang2)\n",
+    "        output_lang = Lang(lang1)\n",
+    "    else:\n",
+    "        input_lang = Lang(lang1)\n",
+    "        output_lang = Lang(lang2)\n",
+    "    \n",
+    "    return input_lang, output_lang, pairs\n",
+    "\n",
+    "englishPrefixes = (\n",
+    "    \"i am \", \"i m \",\n",
+    "    \"he is\", \"he s \",\n",
+    "    \"she is\", \"she s\",\n",
+    "    \"you are\", \"you re \",\n",
+    "    \"we are\", \"we re \",\n",
+    "    \"they are\", \"they re \"\n",
+    "    )\n",
+    "\n",
+    "def filterPair(p):\n",
+    "    check1 = len(p[0].split(' ')) < max_length\n",
+    "    check2 = len(p[1].split(' ')) < max_length\n",
+    "    check3 = p[1].startswith(englishPrefixes)\n",
+    "    return check1 and check2 and check3\n",
+    "\n",
+    "def filterPairs(pairs):\n",
+    "    return [pair for pair in pairs if filterPair(pair)]\n",
+    "\n",
+    "def prepare(lang1, lang2, reverse=False):\n",
+    "    inputLang, outputLang, pairs = readLangs(lang1, lang2, reverse)\n",
+    "    print(\"Read %s sentence pairs.\" % len(pairs))\n",
+    "    \n",
+    "    pairs = filterPairs(pairs)\n",
+    "    print(\"Trimmed to %s sentence pairs.\" % len(pairs))\n",
+    "    \n",
+    "    print(\"Counting words..\")\n",
+    "    \n",
+    "    for pair in pairs:\n",
+    "        inputLang.addSentence(pair[0])\n",
+    "        outputLang.addSentence(pair[1])\n",
+    "        \n",
+    "    print(\"Counted words:\")\n",
+    "    print(inputLang.name, inputLang.n_words)\n",
+    "    print(outputLang.name, outputLang.n_words)\n",
+    "    \n",
+    "    return inputLang, outputLang, pairs\n",
+    "\n",
+    "inputLang, outputLang, pairs = prepare(\"eng\", \"fra\", True)\n",
+    "print(random.choice(pairs))\n",
+    "\n",
+    "def indexesFromSentence(lang, sentence):\n",
+    "    return [lang.word2index[word] for word in sentence.split(' ')]\n",
+    "\n",
+    "def tensorFromSentence(lang, sentence):\n",
+    "    indexes = indexesFromSentence(lang, sentence)\n",
+    "    indexes.append(EOS_token)\n",
+    "    return torch.tensor(indexes, dtype=torch.long, device=device).view(-1,1)\n",
+    "\n",
+    "def tensorsFromPair(pair):\n",
+    "    inputTensor = tensorFromSentence(inputLang, pair[0])\n",
+    "    targetTensor = tensorFromSentence(outputLang, pair[1])\n",
+    "    return (inputTensor, targetTensor)\n",
+    "\n",
+    "def evaluateRandomly(encoder, decoder, n=10):\n",
+    "    for i in range(n):\n",
+    "        pair = random.choice(pairs)\n",
+    "        print('>', pair[0])\n",
+    "        print('=', pair[1])\n",
+    "        output_words, attentions = evaluate(encoder, decoder, pair[0])\n",
+    "        output_sentence = ' '.join(output_words)\n",
+    "        print('<', output_sentence)\n",
+    "        print('')"
    ]
   },
   {
@@ -217,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 132,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-02T15:49:50.995429Z",
@@ -257,6 +410,26 @@
     "    \n",
     "    def initHidden(self):\n",
     "        return torch.zeros(1,1, self.hiddenSize, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Backwards(nn.Module):\n",
+    "    def __init__(self, hidden_size):\n",
+    "        super(Backwards, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.gru = nn.GRU(hidden_size, hidden_size)\n",
+    "\n",
+    "    def forward(self, input, hidden):\n",
+    "        output, hidden = self.gru(input, hidden)\n",
+    "        return output, hidden\n",
+    "\n",
+    "    def initHidden(self):\n",
+    "        return torch.zeros(1, 1, self.hidden_size, device=device)"
    ]
   },
   {
@@ -429,7 +602,7 @@
     "        return self.sigmoid(self.fc4(h3))\n",
     "\n",
     "    def forward(self, x, c):\n",
-    "        mu, logvar = self.encode(x.view(-1, 28*28), c)\n",
+    "        mu, logvar = self.encode(x, c)\n",
     "        z = self.reparametrize(mu, logvar)\n",
     "        return self.decode(z, c), mu, logvar"
    ]
@@ -495,7 +668,7 @@
     "        return self.sigmoid(self.fc4(h3))\n",
     "\n",
     "    def forward(self, x, c):\n",
-    "        mu, logvar = self.encode(x.view(-1, 28*28), c)\n",
+    "        mu, logvar = self.encode(x, c)\n",
     "        z = self.reparametrize(mu, logvar)\n",
     "        return self.decode(z, c), mu, logvar"
    ]
@@ -534,16 +707,16 @@
    "outputs": [],
    "source": [
     "# Reconstruction + KL divergence losses summed over all elements and batch\n",
-    "def loss_function(recon_x, x, mu, logvar):\n",
-    "    BCE = F.binary_cross_entropy(recon_x, x.view(-1, 28*28))\n",
-    "    # see Appendix B from VAE paper:\n",
-    "    # Kingma and Welling. Auto-Encoding Variational Bayes. ICLR, 2014\n",
-    "    # https://arxiv.org/abs/1312.6114\n",
-    "    # 0.5 * sum(1 + log(sigma^2) - mu^2 - sigma^2)\n",
-    "    KLD = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
-    "    return BCE + KLD\n",
+    "def loss_function(y_predicted, y, z_inference, z_prior):\n",
+    "    LL = criterion(y_predicted, y)\n",
+    "    KL = F.kl_div(z_inference, z_prior)\n",
+    "    return LL - KL\n",
     "\n",
     "def KLD(meanA, logvarA, meanB, logvarB):\n",
+    "    \"\"\"\n",
+    "    Not used as PyTorch has its own KL-Divergence function\n",
+    "    which is most likely to be better optimised than whatever i have.\n",
+    "    \"\"\"\n",
     "    # Univariate\n",
     "    # https://stats.stackexchange.com/questions/7440/kl-divergence-between-two-univariate-gaussians\n",
     "    # return logvarB - logvarA + (2*logvarA + (meanA - meanB) ** 2)/(4 * logvarB) - 0.5\n",
@@ -607,6 +780,7 @@
     "             inferenceOpt,\n",
     "             priorOpt,\n",
     "             decoderOpt,\n",
+    "             criterion = nn.NLLLoss(),\n",
     "             maxLength = max_length\n",
     "            ):\n",
     "    \n",
@@ -652,15 +826,15 @@
     "        # get the context vector c\n",
     "        c, _ = attention(decoderH, encoderOutputs[t])\n",
     "        # compute the inference layer\n",
-    "        z_guess, infMean, infLogvar = inference(decoderOutput, c, backwardOutputs[t])\n",
+    "        z_infer, infMean, infLogvar = inference(decoderOutput, c, backwardOutputs[t])\n",
     "        # compute the prior layer\n",
-    "        _,       priMean, priLogvar = prior(decoderOutput, c)\n",
+    "        z_prior, priMean, priLogvar = prior(decoderOutput, c)\n",
     "        # compute the output of each decoder state\n",
-    "        DecoderOut = decoder(decoderInput, c, z_guess, decoderHidden)\n",
+    "        DecoderOut = decoder(decoderInput, c, z_infer, decoderHidden)\n",
     "        decoderOutput, decoderHidden = DecoderOut\n",
     "        \n",
     "        # calculate the loss\n",
-    "        loss += loss_function(decoderOutput, y[t])\n",
+    "        loss += loss_function(decoderOutput, y[t], z_infer, z_prior)\n",
     "        # feed this output to the next input\n",
     "        decoderInput = y[t]\n",
     "    \n",
@@ -679,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,9 +864,10 @@
     "                prior,\n",
     "                decoder,\n",
     "                iterations,\n",
-    "                learningRate=0.0001,\n",
-    "                printEvery=1000,\n",
-    "                plotEvery=100):\n",
+    "                criterion = nn.NLLLoss(),\n",
+    "                learningRate = 0.0001,\n",
+    "                printEvery = 1000,\n",
+    "                plotEvery = 100):\n",
     "    \n",
     "    start = time.time()\n",
     "    plotLosses = []\n",
@@ -713,7 +888,21 @@
     "        trainingPair = trainingPairs[i-1]\n",
     "        x, y = trainingPair[0], trainingPair[1]\n",
     "        # calculate loss.\n",
-    "        loss = train(x, y, encoder, decoder, encoderOptimiser, decoderOptimiser)\n",
+    "        loss = trainVAD(x, y, \n",
+    "             encoder,\n",
+    "             attention,\n",
+    "             backwards,\n",
+    "             inference,\n",
+    "             prior,\n",
+    "             decoder,\n",
+    "             encoderOpt,\n",
+    "             attentionOpt,\n",
+    "             backwardsOpt,\n",
+    "             inferenceOpt,\n",
+    "             priorOpt,\n",
+    "             decoderOpt,\n",
+    "             criterion\n",
+    "            )\n",
     "        # increment our print and plot.\n",
     "        printLossTotal += loss\n",
     "        plotLossTotal += loss\n",
@@ -733,6 +922,48 @@
     "            \n",
     "    showPlot(plotLosses)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'inputSize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-134-aba2d63142f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodelEncoder\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0mEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputLang\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodelAttention\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodelBackwards\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBackwards\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodelInference\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodelPrior\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mPrior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'inputSize'"
+     ]
+    }
+   ],
+   "source": [
+    "modelEncoder   = Encoder(inputLang.n_words).to(device)\n",
+    "modelAttention = Attention().to(device)\n",
+    "modelBackwards = Backwards().to(device)\n",
+    "modelInference = Inference().to(device)\n",
+    "modelPrior     = Prior().to(device)\n",
+    "modelDecoder   = Decoder(outputLang.n_words, dropout=0.1).to(device)\n",
+    "trainIters(encoder,\n",
+    "           attention,\n",
+    "           backwards,\n",
+    "           inference,\n",
+    "           prior,\n",
+    "           decoder,\n",
+    "           iterations,\n",
+    "           75000, \n",
+    "           printEvery=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
