--- a/Samples/Data Preprocessing.ipynb
+++ b/Samples/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.993205 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "pickleFile = '../Datasets/Reviews/dataset.pkl'\n",
     "start = time.clock()\n",
@@ -45,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63001\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(dataset))"
    ]
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,22 +89,6 @@
     }
    ],
    "source": [
-    "# def loadGlove(glove_path, dim=50):\n",
-    "#     acceptedDimensions = [50, 100, 200, 300]\n",
-    "#     if dim not in acceptedDimensions:\n",
-    "#         print(\"You didn't choose a right dimension.\")\n",
-    "#         print(\"Try one of these:\", acceptedDimensions)\n",
-    "#         return None\n",
-    "#     pickleWordFile = f'{glove_path}/6B.'+str(dim)+'_words.pkl'\n",
-    "    \n",
-    "#     if os.path.isfile(pickleWordFile):\n",
-    "#         # check if we've made the outputs before\n",
-    "#         words = pickle.load(open(pickleWordFile, 'rb'))\n",
-    "#         return words\n",
-    "#     else:\n",
-    "#         print(\"Doesn't work\")\n",
-    "#         return -1\n",
-    "    \n",
     "def loadGlove(glove_path, dim=50):\n",
     "    acceptedDimensions = [50, 100, 200, 300]\n",
     "    if dim not in acceptedDimensions:\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,11 +158,9 @@
     "    # remove empty string\n",
     "    return paragraph\n",
     "\n",
-    "def padSentence(words, maxLength, padString=\"<pad>\"):\n",
-    "    if len(words) > maxLength:\n",
-    "        return words[:maxLength]\n",
-    "    else:\n",
-    "        return words + [padString for i in range(maxLength - len(words))]\n",
+    "def padSentence(words, maxLength, eosString=\"<eos>\", padString=\"<pad>\"):\n",
+    "    words = words[:maxLength-1] + [eosString]\n",
+    "    return words + [padString for i in range(maxLength - len(words))]\n",
     "    \n",
     "def discretise(value, word):\n",
     "    return word + \"_\" + str(value)"
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +226,7 @@
     "                # process polarity\n",
     "                polarity = np.round(np.tanh(entry['helpful'][0]-entry['helpful'][1]),1)\n",
     "                polarity = [discretise(polarity, \"polarity\")]\n",
-    "                reviewID = [itemID]\n",
-    "                entry = reviewID + summary + rating + polarity + words\n",
+    "                entry = [itemID] + summary + rating + polarity + words\n",
     "                review.append(entry)\n",
     "\n",
     "        # check if theres less than 5 filtered reviews\n",
@@ -241,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,20 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63001\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(datasetKeys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def imap_unordered_bar(func, args, n_processes = 8):\n",
+    "def imap_unordered_bar(func, args, n_processes = 7):\n",
     "    p = Pool(n_processes)\n",
     "    res_list = []\n",
     "    with tqdm(total = len(args)) as pbar:\n",
@@ -278,9 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 63001/63001 [00:47<00:00, 1330.20it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "reviews = imap_unordered_bar(handle,datasetKeys)"
    ]
@@ -294,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,9 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved!\n"
+     ]
+    }
+   ],
    "source": [
     "# save the dataset to a pickle file.\n",
     "output = open(pickleFile, 'wb')\n",
@@ -316,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +388,7 @@
        "15751"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15751/15751 [00:06<00:00, 2442.36it/s]\n"
+      "100%|██████████| 15751/15751 [00:06<00:00, 2534.54it/s]\n"
      ]
     }
    ],
@@ -404,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,24 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50252/50252 [00:00<00:00, 1396498.78it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "weights = [glove[word] for word in tqdm(wordOrder)]"
+    "weights = [glove[word] for word in wordOrder]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15751/15751 [00:03<00:00, 4379.09it/s]\n"
+      "100%|██████████| 15751/15751 [00:03<00:00, 4208.65it/s]\n"
      ]
     }
    ],
@@ -487,21 +500,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15751/15751 [00:00<00:00, 779595.51it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# need to flatten all the arrays to a 2d!\n",
     "flat = []\n",
-    "for i in tqdm(reviews):\n",
+    "for i in reviews:\n",
     "    if len(i) > 0:\n",
     "        for j in i:\n",
     "            flat += j"
@@ -509,7 +514,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{73: 394358}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sizes = {}\n",
+    "for i in flat:\n",
+    "    dim = len(i)\n",
+    "    if dim not in sizes:\n",
+    "        sizes[dim] = 0\n",
+    "    sizes[dim] += 1\n",
+    "print(sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,13 +546,13 @@
     "    'id2word' : id2word,\n",
     "    'word2id' : word2id,\n",
     "    'reviews' : flat,\n",
-    "    'weights' : np.array(weights)\n",
+    "    'weights' : np.matrix(weights)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -542,26 +570,6 @@
     "pickle.dump(container, output)\n",
     "output.close()\n",
     "print(\"Saved!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['id2word', 'word2id', 'reviews', 'weights'])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "container.keys()"
    ]
   },
   {
