fix data preprocessing

--- a/Samples/Data Preprocessing.ipynb
+++ b/Samples/Data Preprocessing.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded the dataset in 7.46 seconds.\n"
+      "Loaded the dataset in 7.0 seconds.\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7876/7876 [00:13<00:00, 589.68it/s]\n"
+      "100%|██████████| 7876/7876 [00:11<00:00, 676.71it/s]\n"
      ]
     }
    ],
@@ -334,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "6300 1576\n",
-      "1004857 272368\n"
+      "1004741 272484\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "Subsetting Reviews..\n",
-      "We now have 1004857 reviews.\n"
+      "We now have 1004741 reviews.\n"
      ]
     }
    ],
@@ -437,7 +437,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1004857/1004857 [00:23<00:00, 42546.67it/s]\n"
+      "100%|██████████| 1004741/1004741 [00:21<00:00, 46841.72it/s]\n"
      ]
     }
    ],
@@ -474,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53591 169842\n"
+      "53587 169840\n"
      ]
     }
    ],
@@ -624,8 +624,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1004857/1004857 [00:12<00:00, 80092.12it/s]\n",
-      "100%|██████████| 272368/272368 [00:05<00:00, 51710.98it/s]\n"
+      "100%|██████████| 1004741/1004741 [00:12<00:00, 80808.75it/s]\n",
+      "100%|██████████| 272484/272484 [00:05<00:00, 53816.71it/s]\n"
      ]
     }
    ],
@@ -709,12 +709,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cutoff sequence length: 14\n"
+      "Cutoff sequence length: 60\n"
      ]
     }
    ],
    "source": [
-    "cutoff = seqlengths[37]\n",
+    "cutoff = 60\n",
     "print(\"Cutoff sequence length:\", cutoff)"
    ]
   },
@@ -727,8 +727,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1004857/1004857 [00:03<00:00, 291220.29it/s]\n",
-      "100%|██████████| 272368/272368 [00:00<00:00, 1035464.84it/s]\n"
+      "100%|██████████| 1004741/1004741 [00:03<00:00, 254006.43it/s]\n",
+      "100%|██████████| 272484/272484 [00:00<00:00, 648049.54it/s]\n"
      ]
     }
    ],
@@ -767,7 +767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved! 115.9 MB\n"
+      "Saved! 218.1 MB\n"
      ]
     }
    ],
@@ -796,13 +796,33 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train[0][::32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31402/31402 [00:03<00:00, 10045.80it/s]\n",
-      "100%|██████████| 31402/31402 [00:00<00:00, 31810.01it/s]\n",
-      "100%|██████████| 8512/8512 [00:00<00:00, 31154.86it/s]\n",
-      "100%|██████████| 8512/8512 [00:00<00:00, 30002.59it/s]\n"
+      "100%|██████████| 31399/31399 [00:04<00:00, 6546.91it/s]\n",
+      "100%|██████████| 31399/31399 [00:02<00:00, 14226.19it/s]\n",
+      "100%|██████████| 8516/8516 [00:00<00:00, 14052.72it/s]\n",
+      "100%|██████████| 8516/8516 [00:00<00:00, 14237.41it/s]\n"
      ]
     }
    ],
@@ -864,83 +884,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import random\n",
-    "\n",
-    "seed = 1337\n",
-    "\n",
-    "torch.manual_seed(seed)\n",
-    "random.seed(seed)\n",
-    "np.random.seed(seed)\n",
-    "\n",
-    "mean1 = np.random.normal(0,1,400)\n",
-    "mean2 = np.random.normal(0,1,400)\n",
-    "var1  = np.random.normal(0,1,400)\n",
-    "var2  = np.random.normal(0,1,400)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gau_kl(pm, pv, qm, qv):\n",
-    "    \"\"\"\n",
-    "    Kullback-Liebler divergence from Gaussian pm,pv to Gaussian qm,qv.\n",
-    "    Also computes KL divergence from a single Gaussian pm,pv to a set\n",
-    "    of Gaussians qm,qv.\n",
-    "    Diagonal covariances are assumed.  Divergence is expressed in nats.\n",
-    "    \"\"\"\n",
-    "    if (len(qm.shape) == 2):\n",
-    "        axis = 1\n",
-    "    else:\n",
-    "        axis = 0\n",
-    "    # Determinants of diagonal covariances pv, qv\n",
-    "    dpv = pv.prod()\n",
-    "    dqv = qv.prod(axis)\n",
-    "    # Inverse of diagonal covariance qv\n",
-    "    iqv = 1./qv\n",
-    "    # Difference between means pm, qm\n",
-    "    diff = qm - pm\n",
-    "    return (0.5 *\n",
-    "            (np.log(dqv / dpv)            # log |\\Sigma_q| / |\\Sigma_p|\n",
-    "             + (iqv * pv).sum(axis)          # + tr(\\Sigma_q^{-1} * \\Sigma_p)\n",
-    "             + (diff * iqv * diff).sum(axis) # + (\\mu_q-\\mu_p)^T\\Sigma_q^{-1}(\\mu_q-\\mu_p)\n",
-    "             - len(pm)))                     # - N"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:23: RuntimeWarning: invalid value encountered in log\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gau_kl(mean1,var1, mean2, var2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
