--- a/Documents/report/main.tex
+++ b/Documents/report/main.tex
@@ -91,16 +91,21 @@
 \fancyhead[LO,RE]{\slshape \leftmark}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Introduction}
+% \chapter{Introduction}
 
-% \begin{figure}[tb]
-% \centering
-% \includegraphics[width = 0.4\hsize]{./figures/imperial}
-% \caption{Imperial College Logo. It's nice blue, and the font is quite stylish. But you can choose a different one if you don't like it.}
-% \label{fig:logo}
-% \end{figure}
+% % \begin{figure}[tb]
+% % \centering
+% % \includegraphics[width = 0.4\hsize]{./figures/imperial}
+% % \caption{Imperial College Logo. It's nice blue, and the font is quite stylish. But you can choose a different one if you don't like it.}
+% % \label{fig:logo}
+% % \end{figure}
 
-% Figure~\ref{fig:logo} is an example of a figure. 
+% % Figure~\ref{fig:logo} is an example of a figure. 
+
+
+% - Talk about the problem definition
+% - talk about what you done
+% - talk about the conclusion
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -134,7 +139,7 @@ The premise of this literature survey is to describe the relevant components nec
 
 % - talk about the fact that this is an understudied problem; the described tools are commonly used in other areas of contempoary computer science.
 
-Text generation is a a type of Language Modelling problem, which in itself, is one of the core natural language processing problems, and it used in a variety of contempoary applications, ranging from machine translation, to email response generation, to document summarisation.
+Text generation is a a type of Language Modelling problem, which in itself, is one of the core natural language processing problems. It is used in a variety of contempoary applications, ranging from machine translation, to email response generation, to document summarisation.
 
 In our particular case we imagine a scenario where a client requests the use of our dataset. We would permit them access to said data, but it would reveal the identities of the users in the data. The objective is to have some alternative dataset to ours such that value can be deduced from the data, but the privacy of the users in our original dataset is maintained.
 
